# nobady-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.override.yaml  compose.yaml  package.json  tailwind.config.js
assets/css/: styles.css
assets/js/: home.js
nobody-chat-server/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  compose.yaml
nobody-chat-server/src/: lib.rs  main.rs  state.rs
nobody-chat-server/src/chat/: chat_room.rs  mod.rs  models.rs  plain_user.rs  user.rs
nobody-chat-server/src/cipher/: chacha.rs  mod.rs
nobody-chat-server/src/routes/: home.rs
nobody-chat-server/src/signal/: mod.rs
nobody-chat-server/src/socket/: recv.rs  send.rs
nobody-chat-vue/: .dockerignore  .env  .env.production  .env.test  .gitignore  Dockerfile  README.md  compose.yaml  env.d.ts  index.html  input.css  package.json  tailwind.config.js  vite.config.ts
nobody-chat-vue/src/: http.ts  models.ts  rtc.ts  utils.ts
nobody-chat-vue/src/assets/: main.css
nobody-chat-vue/src/components/: ChatBubbleBox.vue  MyBubble.vue  Notices.vue  OnlineUser.vue  TheirBubble.vue
nobody-chat-vue/src/icons/: video.vue
nobody-chat-vue/src/net/: cipher.ts  netsocket.test.ts  netsocket.ts
nobody-chat-vue/src/signal/: one2one.ts  rtc_121.test.ts  rtc_121.ts  rtc_121_2.ts  signaling_server.test.ts  signaling_server.ts
nobody-chat-vue/src/stores/: chat_state.test.ts  chat_state.ts  (+5 more)
src/: lib.rs  main.rs
src/chat/: chat_room.rs  mod.rs  models.rs  user.rs
src/routes/: home.rs  not_found.rs
templates/: 404.html  home.html  index.html
(+5 files in other folders)
