[package]
name = "nobody-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
notify = "6.1.1"
tokio = { version = "1.40.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-livereload = "0.9.3"

[dev-dependencies]
notify = "6.1.1"
tower-livereload = "0.9.3"
