[package]
name = "nobody-chat"
version = "0.1.0"
edition = "2021"
description = "a simple chat room, anoymous without login"
license = "MIT"
repository = "https://github.com/dvorakchen/nobody-chat"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.5.17", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
kameo = "0.10.0"
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.10.0", features = ["v4"] }

listenfd = "1.0.1"
